draft: remove old contract and add interface

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xdefi-staking",
+  "name": "xdefi-distribution",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,7 +8,7 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.0.3",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
