--- a/package.json
+++ b/package.json
@@ -4,7 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "hardhat test",
+    "coverage": "hardhat coverage",
+    "deploy:ropsten": "hardhat run scripts/deploy.js --network ropsten",
+    "deploy:rinkeby": "hardhat run scripts/deploy.js --network rinkeby",
+    "deploy:mainnet": "hardhat run scripts/deploy.js --network mainnet",
+    "deploy:ganache": "hardhat run scripts/deploy.js --network ganache"
   },
   "keywords": [],
   "author": "",
