--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "deploy:rinkeby": "hardhat run scripts/deploy.js --network rinkeby",
         "deploy:mainnet": "hardhat run scripts/deploy.js --network mainnet",
         "deploy:ganache": "hardhat run scripts/deploy.js --network ganache",
+        "sample:ganache": "hardhat run scripts/sampleLock.js --network ganache",
         "server": "node ./backend/index.js",
         "prettier": "prettier --write './'"
     },
@@ -30,6 +31,7 @@
         "solidity-coverage": "^0.7.17"
     },
     "dependencies": {
-        "@openzeppelin/contracts": "^4.4.0"
+        "@openzeppelin/contracts": "^4.4.0",
+        "axios": "^0.26.0"
     }
 }
